# Mohtion

./: .env.example  CLAUDE.md  Dockerfile  GEMINI.md  LOGBOOK.md  README.md  TODO.md  TROUBLESHOOTING.md  docker-compose.yml  package-lock.json  pyproject.toml  railway.toml  test_full_loop.py
.claude/: settings.local.json
landing_page/: DESIGN_RULES.md  package-lock.json  package.json
landing_page/app/: feat.txt  globals.css  layout.tsx  page.tsx
landing_page/components/: AgentWorkflow.tsx  CTA.tsx  CommandCenter.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  TechStack.tsx  TerminalDemo.tsx
landing_page/components/ui/: background-beams.tsx  container-scroll-animation.tsx
migrations/: env.py
migrations/versions/: f320e5d87642_initial_schema.py
mohtion/: config.py  utils.py
mohtion/agent/: orchestrator.py  scanner.py  verifier.py
mohtion/analyzers/: __init__.py  duplicate.py  type_checker.py
mohtion/db/: crud.py  session.py
mohtion/integrations/: github_api.py  github_app.py
mohtion/models/: __init__.py  bounty.py  repository.py  scan.py
mohtion/services/: __init__.py  bounty_service.py
mohtion/web/: app.py
mohtion/web/routes/: health.py  webhooks.py
mohtion/worker/: tasks.py
tests/: test_analyzers_expanded.py
